--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Show</title>
-    <link rel="stylesheet" href="C:\Users\DELL\Desktop\guvi\show.css" />
+    <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
     <div class="top">TVMAZE.com</div>
-    <script src="C:\Users\DELL\Desktop\guvi\show.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
